<resources>
    <string name="app_name">Elsword Clicker</string>
    <string name="background">Background</string>
    <string name="longsword">Longsword</string>
    <string name="bigsword">Bigsword</string>
    <string name="critical_hit">Critical hit</string>
    <string name="enemy">Enemy</string>
    <string name="stage_1">Stage 1</string>
    <string name="eldollar">ED:</string>
    <string name="damage">Dmg:</string>
    <string name="magma">magma</string>
    <string name="shop">Shop</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="danke">Danke für das Spielen bzw. Testen meiner App!!! Du hilfst mir damit sehr und dafür wollte ich mich bei dir bedanken! Ich werde immer auf eure Wünsche programmieren und werde versuchen das Spiel weiter zu verbessern wie es nur geht und dafür brauche ich dein Feedback, deine Nutzererfahrungen und am aller wichtigsten deine Kreativität! Du kannst mich jederzeit auf Telegram anschreiben oder in der Gruppe (Die du bei dem Punkt INFO findest) deine Verbesserungen hineinschreiben.\n\nDein Entwickler, Emi Émre</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="skills">Skills:</string>
    <string name="shop2">Shop:</string>
    <string name="autoclick_s">Autoclick/s:</string>
</resources>
