<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GameView"
    tools:showIn="@layout/gameview_main">

    <TextView
        android:id="@+id/stage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/stage_1"
        android:layout_gravity="right"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:targetApi="jelly_bean" />

    <ImageView
        android:id="@+id/enemy"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/enemy"
        android:cropToPadding="false"
        android:defaultFocusHighlightEnabled="false"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:scaleType="centerInside"
        android:soundEffectsEnabled="true"
        app:srcCompat="@drawable/e1"
        tools:targetApi="o" />

        <TextView
            android:id="@+id/lifee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <ProgressBar
            android:id="@+id/health"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressTint="@android:color/holo_red_dark"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/magma"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/magma"
                app:srcCompat="@drawable/magma" />

            <ImageView
                android:id="@+id/buggiebomb"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo2"
                app:srcCompat="@drawable/buggiebomb" />

            <ImageView
                android:id="@+id/milch"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo3"
                app:srcCompat="@drawable/milch" />
        </LinearLayout>

    </LinearLayout>
