<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:keepScreenOn="true"
    tools:context="deve.org.elswordclicker.GameView">

    <ImageView
        android:id="@+id/enemy"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/enemy"
        android:cropToPadding="false"
        android:defaultFocusHighlightEnabled="false"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:scaleType="centerInside"
        android:soundEffectsEnabled="true"
        app:srcCompat="@drawable/elsword1"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/lifee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/health"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <ProgressBar
        android:id="@+id/health"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enemy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:progressTint="@android:color/white"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/stage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lifee"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="casual"
        android:text="@string/stage_1"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/magma"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/magma"
        app:srcCompat="@drawable/magma" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enemy"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/eldollar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="casual"
            android:text="@string/eldollar"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dmmg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="casual"
            android:text="@string/damage"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
