<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:keepScreenOn="true"
    tools:context="deve.org.elswordclicker.GameView">

    <ImageView
        android:id="@+id/enemy"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/enemy"
        android:cropToPadding="false"
        android:defaultFocusHighlightEnabled="false"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:scaleType="centerInside"
        android:soundEffectsEnabled="true"
        app:srcCompat="@drawable/enenmy"
        tools:targetApi="o" />

    <ProgressBar
        android:id="@+id/health"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enemy"
        android:layout_centerHorizontal="true"
        android:progressTint="@android:color/holo_orange_dark"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/skill1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/garensword"
        android:onClick="onSkill1" />

    <TextView
        android:id="@+id/stage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/skill1"
        android:layout_toStartOf="@+id/skill1"
        android:text="@string/stage_1"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/health">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eldollar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eldollar"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dmmg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/damage"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ccrit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crit"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
